Add descriptions to the inputs

--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -5,12 +5,16 @@ on:
       os:
         required: true
         type: string
+        default: ubuntu-latest
+        description: 'The os to run the runner on'
       dotnet_version:
         required: true
         type: string
+        description: 'The dotnet version to use'
       solution_file:
         required: true
         type: string
+        description: 'The full name of the solution file'
 
 env:
   # Stop wasting time caching packages
