--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -33,6 +33,13 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: ${{ inputs.dotnet_version }}
+    - name: Setup github remotes
+      run: >
+        dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
+        --username ${{ github.repository_owner }}
+        --password "$GITHUB_TOKEN"
+        --store-password-in-clear-text
+        --name github
     - name: Install dependencies
       run: dotnet restore ${{ inputs.solution_file }}
     - name: Build
