--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -40,6 +40,7 @@ jobs:
         --password "$GITHUB_TOKEN"
         --store-password-in-clear-text
         --name github
+      shell: bash
     - name: Install dependencies
       run: dotnet restore ${{ inputs.solution_file }}
     - name: Build
