--- a/.github/workflows/DeployNugetGithub.yml
+++ b/.github/workflows/DeployNugetGithub.yml
@@ -45,7 +45,7 @@ jobs:
       run: >
         dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
         --username ${{ github.repository_owner }}
-        --password "$GITHUB_TOKEN"
+        --password ${{ secrets.GITHUB_TOKEN }}
         --store-password-in-clear-text
         --name github
       shell: bash
