--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -15,6 +15,9 @@ on:
         required: true
         type: string
         description: 'The full name of the solution file'
+    secrets:
+      GITHUB_PAT:
+        required: false
 
 env:
   # Stop wasting time caching packages
@@ -24,6 +27,8 @@ env:
 jobs:
   build-and-test:
     runs-on: ${{ inputs.os }}
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -34,10 +39,11 @@ jobs:
       with:
         dotnet-version: ${{ inputs.dotnet_version }}
     - name: Setup github remotes
+      if: env.GITHUB_PAT != ''
       run: >
         dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
         --username ${{ github.repository_owner }}
-        --password ${{ secrets.GITHUB_TOKEN }}
+        --password ${{ secrets.GITHUB_PAT }}
         --store-password-in-clear-text
         --name github
       shell: bash
