--- a/.github/workflows/DeployNugetGithub.yml
+++ b/.github/workflows/DeployNugetGithub.yml
@@ -80,7 +80,7 @@ jobs:
     - name: Push to NuGet Feed
       if: env.NBGV_PublicRelease == 'true' && env.NUGET_KEY != ''
       run: >
-        dotnet nuget push ./bin/Pack/*.nupkg
+        dotnet nuget push ${{ env.OutputPath }}*.nupkg
         --source https://api.nuget.org/v3/index.json
         --skip-duplicate
         --api-key ${{ secrets.NUGET_KEY }}
