--- a/.github/workflows/DeployNugetGithub.yml
+++ b/.github/workflows/DeployNugetGithub.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Install dependencies
       run: dotnet restore ${{ inputs.solution_file }}
     - name: Set Windows
-      if: ${{ inputs.os }} == 'Windows'
+      if: runner.os == 'Windows'
       run: |
          chcp 65001 #set code page to utf-8
          echo ("OutputPath=" + ".\bin\Pack\") >> $env:GITHUB_ENV
