--- a/.github/workflows/CreateReleaseWixInstaller.yml
+++ b/.github/workflows/CreateReleaseWixInstaller.yml
@@ -84,6 +84,7 @@ jobs:
           --repo="$GITHUB_REPOSITORY"
           --title="${GITHUB_REPOSITORY#*/} ${tag#v}"
           --generate-notes
+        shell: bash
       - name: Upload installers
         env:
           tag: ${{ github.ref_name }}
