--- a/.github/workflows/CreateReleaseWixInstaller.yml
+++ b/.github/workflows/CreateReleaseWixInstaller.yml
@@ -90,9 +90,11 @@ jobs:
           tag: ${{ github.ref_name }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         working-directory: ${{ env.OutputPath }}
-        run: >
-          for f in $(find . -name '*.msi'); do
-          gh release upload $tag $f
-          --repo="$GITHUB_REPOSITORY"
+        run: |
+          for f in $(find . -name '*.msi')
+          do
+            echo Uploading $f
+            > gh release upload $tag $f
+              --repo="$GITHUB_REPOSITORY"
           done
         shell: bash
