--- a/.github/workflows/CreateReleaseWixInstaller.yml
+++ b/.github/workflows/CreateReleaseWixInstaller.yml
@@ -30,7 +30,7 @@ env:
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   OutputPath: ./bin/Installer/
 jobs:
-  build-and-test:
+  release:
     if: contains(github.ref, 'refs/tags/')
     runs-on: ${{ inputs.os }}
     permissions:
