--- a/.github/workflows/CreateReleaseWixInstaller.yml
+++ b/.github/workflows/CreateReleaseWixInstaller.yml
@@ -90,11 +90,11 @@ jobs:
           tag: ${{ github.ref_name }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         working-directory: ${{ env.OutputPath }}
-        run: |
-          for f in $(find . -name '*.msi')
+        run: >
+          for f in $(find . -name '*.msi');
           do
-            echo Uploading $f
-            > gh release upload $tag $f
-              --repo="$GITHUB_REPOSITORY"
+          echo Uploading $f &&
+          gh release upload $tag $f
+          --repo="$GITHUB_REPOSITORY";
           done
         shell: bash
