--- a/.github/workflows/DeployNugetGithub.yml
+++ b/.github/workflows/DeployNugetGithub.yml
@@ -66,7 +66,7 @@ jobs:
         --verbosity normal
         --nologo
         --no-restore
-        /p:Version=${{ env.NBGV_SemVer2 }}
+        "/p:Version=${{ env.NBGV_SemVer2 }};EnableWindowsTargeting=true"
         --output ${{ env.OutputPath }}
     - name: Push to GitHub Feed
       run: >
