--- a/.github/workflows/DeployNugetGithub.yml
+++ b/.github/workflows/DeployNugetGithub.yml
@@ -58,7 +58,7 @@ jobs:
       with:
         setAllVars: true
     - name: Install dependencies
-      run: dotnet restore ${{ inputs.solution_file }}
+      run: dotnet restore ${{ inputs.solution_file }} /p:EnableWindowsTargeting=true
     - name: Set Windows
       if: runner.os == 'Windows'
       run: |
