Use multiline for commands

--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -51,7 +51,9 @@ jobs:
         --store-password-in-clear-text
         --name github
     - name: Install dependencies
-      run: dotnet restore ${{ inputs.solution_file }} /p:EnableWindowsTargeting=true
+      run: >
+        dotnet restore ${{ inputs.solution_file }}
+        /p:EnableWindowsTargeting=true
     - name: Build
       run: >
         dotnet build ${{ inputs.solution_file }}
