--- a/.github/workflows/CreateReleaseWixInstaller.yml
+++ b/.github/workflows/CreateReleaseWixInstaller.yml
@@ -58,7 +58,9 @@ jobs:
           --store-password-in-clear-text
           --name github
       - name: Install dependencies
-        run: dotnet restore ${{ inputs.solution_file }} /p:EnableWindowsTargeting=true
+        run: > 
+          dotnet restore ${{ inputs.solution_file }}
+          /p:EnableWindowsTargeting=true
       - name: Set Windows
         if: runner.os == 'Windows'
         run: |
