--- a/.github/workflows/DeployNugetGithub.yml
+++ b/.github/workflows/DeployNugetGithub.yml
@@ -62,7 +62,9 @@ jobs:
       with:
         setAllVars: true
     - name: Install dependencies
-      run: dotnet restore ${{ inputs.solution_file }} /p:EnableWindowsTargeting=true
+      run: >
+        dotnet restore ${{ env.TargetPath }}
+        /p:EnableWindowsTargeting=true
     - name: Set Windows
       if: runner.os == 'Windows'
       run: |
