--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -28,12 +28,19 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   # Disable sending usage data to Microsoft
   DOTNET_CLI_TELEMETRY_OPTOUT: true
+  Target: ${{ inputs.solution_directory }}${{ inputs.solution_file }}
 jobs:
   build-and-test:
     runs-on: ${{ inputs.os }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
     steps:
+    - name: Sanitize windows paths
+      if: runner.os == 'Windows'
+      run: |
+         chcp 65001 #set code page to utf-8
+         $target = $env:Target.Replace('/', '\')
+         echo ("Target=" + $target) >> $env:GITHUB_ENV
     - name: Checkout
       uses: actions/checkout@v4
       with:
@@ -52,17 +59,17 @@ jobs:
         --name github
     - name: Install dependencies
       run: >
-        dotnet restore ${{ inputs.solution_file }}
+        dotnet restore ${{ env.Target }}
         /p:EnableWindowsTargeting=true
     - name: Build
       run: >
-        dotnet build ${{ inputs.solution_file }}
+        dotnet build ${{ env.Target }}
         --configuration Release
         --no-restore
         /p:EnableWindowsTargeting=true
     - name: Test
       run: >
-        dotnet test ${{ inputs.solution_file }}
+        dotnet test ${{ env.Target }}
         --configuration Release
         --verbosity normal
         --no-build
