--- a/.github/workflows/DeployNugetGithub.yml
+++ b/.github/workflows/DeployNugetGithub.yml
@@ -32,7 +32,10 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   # Disable sending usage data to Microsoft
   DOTNET_CLI_TELEMETRY_OPTOUT: true
-  OutputPath: ./bin/Pack/
+  NBGV_PublicRelease: false
+  Input: ${{ inputs.solution_directory }}
+  PackageDirectory: ./bin/Pack/
+  Target: ${{ inputs.solution_directory }}${{ inputs.solution_file }}
 jobs:
   deploy:
     if: ${{ inputs.run_condition }}
@@ -42,6 +45,16 @@ jobs:
     env:
       NUGET_KEY: ${{ secrets.NUGET_KEY }}
     steps:
+    - name: Sanitize windows paths
+      if: runner.os == 'Windows'
+      run: |
+         chcp 65001 #set code page to utf-8
+         $out = $env:PackageDirectory.Replace('/', '\')
+         echo ("PackageDirectory=" + $out) >> $env:GITHUB_ENV
+         $in = $env:Input.Replace('/', '\')
+         echo ("Input=" + $in) >> $env:GITHUB_ENV
+         $target = $env:Target.Replace('/', '\')
+         echo ("Target=" + $target) >> $env:GITHUB_ENV
     - name: Checkout
       uses: actions/checkout@v4
       with:
@@ -49,7 +62,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '8.0.x'
+        dotnet-version: ${{ inputs.dotnet_version }}
     - name: Setup github remotes
       run: >
         dotnet nuget add source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
@@ -61,27 +74,23 @@ jobs:
       uses: dotnet/nbgv@master
       with:
         setAllVars: true
+        path: ${{ env.Input }}
     - name: Install dependencies
       run: >
-        dotnet restore ${{ env.TargetPath }}
+        dotnet restore ${{ env.Target }}
         /p:EnableWindowsTargeting=true
-    - name: Set Windows
-      if: runner.os == 'Windows'
-      run: |
-         chcp 65001 #set code page to utf-8
-         echo ("OutputPath=" + ".\bin\Pack\") >> $env:GITHUB_ENV
     - name: Pack
       run: >
-        dotnet pack ${{ inputs.solution_file }}
+        dotnet pack ${{ env.Target }}
         --configuration Release
         --verbosity normal
         --nologo
         --no-restore
-        "/p:Version=${{ env.NBGV_SemVer2 }};EnableWindowsTargeting=true"
-        --output ${{ env.OutputPath }}
+        /p:EnableWindowsTargeting=true
+        --output ${{ env.PackageDirectory }}
     - name: Push to GitHub Feed
       run: >
-        dotnet nuget push ${{ env.OutputPath }}*.nupkg
+        dotnet nuget push ${{ env.PackageDirectory }}*.nupkg
         --source "github"
         --skip-duplicate
         --api-key ${{ secrets.GITHUB_TOKEN }}
@@ -91,7 +100,7 @@ jobs:
     - name: Push to NuGet Feed
       if: env.NBGV_PublicRelease == 'true' && env.NUGET_KEY != ''
       run: >
-        dotnet nuget push ${{ env.OutputPath }}*.nupkg
+        dotnet nuget push ${{ env.PackageDirectory }}*.nupkg
         --source https://api.nuget.org/v3/index.json
         --skip-duplicate
         --api-key ${{ secrets.NUGET_KEY }}
